--- a/.github/workflows/my_workflow.yml
+++ b/.github/workflows/my_workflow.yml
@@ -13,6 +13,9 @@ jobs:
         run: |
           pip install poetry
           make install
+      - name: Run linter and pytest
+        run: |
+          make check
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v3.2.0
         if: github.ref_name == 'main'
