--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ isort-show-traceback = True
 exclude = .venv,dist,build
 
 per-file-ignores =
-init modules can contain the local imports, logic, unused imports
+# init modules can contain the local imports, logic, unused imports
 __init__.py: F401
 
 [isort]
