--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "gendiff"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 pytest-cov = "^4.1.0"
+pyyaml = "^6.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
